# 3DScanner

./: CMakeLists.txt  README.md  denseandmesh.py  process_scan.py
app/: CMakeLists.txt
app/src/: main.c
grabber/: CMakeLists.txt  grabber.c  grabber.h
hal/: CMakeLists.txt
hal/include/: camera.h  stepper.h
hal/src/: camera.c  hal.c  stepper.c
